# AUT_AP_2024_Spring_HW1

./: CMakeLists.txt  Dockerfile  LICENSE  README.md
bash/need_backup/Documents/: demo.txt  example.txt  sample.txt  test.txt
bash/need_backup/Scripts/: demo.sh  example.sh  sample.sh  test.sh
include/: algebra.h
src/: main.cpp  unit_test.cpp
